# sheet2pdf-rag

./: .gitignore  404.html  README.md  mkdocs.yml  pyproject.toml  rename.py
docs/: api_reference.md  architecture.md  index.md
docs/examples/: langchain.md  vertex_ai.md
examples/: 01_langchain_basic.py  02_gcp_vertex_vision.py
examples/vertex_ai/: index.html
search/: search_index.json
site/: index.html
site/examples/langchain/: index.html
src/sheet2pdf_rag/: __init__.py  core.py  gcp_vertex.py  langchain_loader.py
tests/: conftest.py  test_basic.py  test_core.py  test_gcp_vertex.py  test_langchain.py
