[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sheet2pdf-rag"
version = "0.1.0"
authors = [
  { name="AI Solutions Team", email="eng@example.com" },
]
description = "A production-grade Python library to convert complex Excel files to PDFs for RAG systems, natively integrated with LangChain and Google Vertex AI."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain-core>=0.2.0",
    "openpyxl>=3.1.2",
    "pypdf>=4.0.0",
    "google-cloud-aiplatform>=1.50.0"
]

[project.optional-dependencies]
windows = [
    "pywin32>=306"
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.24.0"
]

[project.urls]
"Homepage" = "https://github.com/example/sheet2pdf-rag"
